--- a/e4750/hw3/hw3-pycuda.ipynb
+++ b/e4750/hw3/hw3-pycuda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
     "\n",
     "\t\tself.getSourceModule('naive')\n",
     "\t\tfunc_conv = self.mod.get_function(\"conv_gpu_naive\")\n",
-    "\t\twidth, height = N.shape\n",
+    "\t\theight, width = N.shape\n",
     "\t\t# print(height,width)\n",
     "\t\tmask_width = M.shape[0]\n",
     "\t\t# print(mask_width)\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -151,28 +151,31 @@
      "output_type": "stream",
      "text": [
       "False\n",
-      "[[0.26316992 0.00561049 0.09780918 0.66785345 0.7254731  0.98226722]\n",
-      " [0.73632977 0.6206267  0.9837882  0.60846583 0.99053815 0.06793333]\n",
-      " [0.01167891 0.31124386 0.7169592  0.52563697 0.75229281 0.18951355]\n",
-      " [0.0350639  0.71130103 0.2453889  0.64449197 0.07635259 0.25546522]\n",
-      " [0.93311056 0.34697135 0.04985432 0.88724987 0.40836074 0.11120028]] \n",
+      "[[0.27530279 0.31653434 0.7534699  0.67114368 0.99024104]\n",
+      " [0.00622994 0.72482204 0.3604693  0.78444885 0.45419031]\n",
+      " [0.62593506 0.49758604 0.03948458 0.73805377 0.45162348]\n",
+      " [0.93877677 0.01413113 0.31624175 0.16355324 0.04810857]\n",
+      " [0.76496508 0.23980418 0.88955593 0.94045016 0.38946281]\n",
+      " [0.07466562 0.33541515 0.28967001 0.03664556 0.65185675]] \n",
       "\n",
-      "[[0.7363298  0.6206267  0.9837882  0.60846585 0.         0.06793333]\n",
-      " [0.01167891 0.31124386 0.7169592  0.         0.         0.        ]\n",
-      " [0.         0.         0.         0.         0.         0.        ]\n",
-      " [0.         0.         0.         0.         0.         0.        ]\n",
-      " [0.         0.         0.         0.         0.         0.        ]] \n",
+      "[[0.72482204 0.3604693  0.78444886 0.4541903  0.        ]\n",
+      " [0.49758604 0.03948458 0.7380538  0.45162347 0.        ]\n",
+      " [0.         0.         0.         0.         0.        ]\n",
+      " [0.         0.         0.         0.         0.        ]\n",
+      " [0.         0.         0.         0.         0.        ]\n",
+      " [0.         0.         0.         0.         0.        ]] \n",
       "\n",
-      "[[0.6206267  0.9837882  0.60846585 0.9905382  0.06793333 0.        ]\n",
-      " [0.31124386 0.7169592  0.525637   0.7522928  0.18951355 0.        ]\n",
-      " [0.711301   0.24538891 0.644492   0.0763526  0.2554652  0.        ]\n",
-      " [0.34697136 0.04985432 0.8872499  0.40836075 0.11120028 0.        ]\n",
-      " [0.         0.         0.         0.         0.         0.        ]]\n"
+      "[[0.72482204 0.3604693  0.78444886 0.4541903  0.        ]\n",
+      " [0.49758604 0.03948458 0.7380538  0.45162347 0.        ]\n",
+      " [0.01413113 0.31624174 0.16355324 0.04810857 0.        ]\n",
+      " [0.23980418 0.88955593 0.94045013 0.3894628  0.        ]\n",
+      " [0.33541515 0.28967002 0.03664556 0.6518567  0.        ]\n",
+      " [0.         0.         0.         0.         0.        ]]\n"
      ]
     }
    ],
    "source": [
-    "N = np.random.rand(5,6)\n",
+    "N = np.random.rand(6,5)\n",
     "M = np.random.rand(3,3)\n",
     "M = np.array([[1,0,0],[0,0,0],[0,0,0]])\n",
     "# print(M)\n",
