--- a/e4750/hw3/hw3-pycuda.ipynb
+++ b/e4750/hw3/hw3-pycuda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,25 +54,26 @@
     "\n",
     "\t\t\t\tfloat p_value = 0.0f;\n",
     "\n",
-    "\t\t\t\t// for every pixel in mask\n",
+    "\t\t\t\t// in y direction of mask\n",
     "\t\t\t\tfor(int i=0; i<mask_w; i++){\n",
+    "\t\t\t\t\t// x coordinate in mask\n",
+    "\t\t\t\t\tint row_mask = mask_w - 1 - i;\n",
     "\t\t\t\t\t// x coordinate in N\n",
-    "\t\t\t\t\tint row_i = row_start + i;\n",
-    "\t\t\t\t\t// if in the range of N\n",
-    "\t\t\t\t\tif(row_i>=0 && row_i<n_h){\n",
-    "\t\t\t\t\t\tfor(int j=0; j<mask_w; j++){\n",
-    "\t\t\t\t\t\t\t// y coordinate in N\n",
-    "\t\t\t\t\t\t\tint col_i = col_start + j;\n",
-    "\t\t\t\t\t\t\t// if in the range of N\n",
-    "\t\t\t\t\t\t\tif(col_i>=0 && col_i<n_w){\n",
-    "\t\t\t\t\t\t\t\tp_value += N[row_i*n_w+col_i] * M[mask_w*mask_w-(i*mask_w+j)-1];\n",
-    "\t\t\t\t\t\t\t\t//int a = col_i*n_w+row_i;\n",
-    "\t\t\t\t\t\t\t\t//printf(\"%d\", a);\n",
-    "\t\t\t\t\t\t\t}\n",
+    "\t\t\t\t\tint row_n = row_start + i;\n",
+    "\n",
+    "\t\t\t\t\t// in x direction of mask\n",
+    "\t\t\t\t\tfor(int j=0; j<mask_w; j++){\n",
+    "\t\t\t\t\t\t// y coordinate in mask\n",
+    "\t\t\t\t\t\tint col_mask = mask_w - 1 - j;\n",
+    "\t\t\t\t\t\t// y coordinate in N\n",
+    "\t\t\t\t\t\tint col_n = col_start + j;\n",
+    "\n",
+    "\t\t\t\t\t\t// if in the range of N\n",
+    "\t\t\t\t\t\tif ((col_n>=0) && (col_n<n_w) && (row_n>=0) && (row_n<n_h)){\n",
+    "\t\t\t\t\t\t\tp_value += N[row_n*n_w+col_n] * M[row_mask*mask_w+col_mask];\n",
     "\t\t\t\t\t\t}\n",
     "\t\t\t\t\t}\n",
     "\t\t\t\t}\n",
-    "\t\t\t\t//P[row*n_w+col] = N[row*n_w+col];\n",
     "\t\t\t\tP[row*n_w+col] = p_value;\n",
     "\t\t\t}\n",
     "\t\t\n",
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -151,26 +152,36 @@
      "output_type": "stream",
      "text": [
       "False\n",
-      "[[0.27530279 0.31653434 0.7534699  0.67114368 0.99024104]\n",
-      " [0.00622994 0.72482204 0.3604693  0.78444885 0.45419031]\n",
-      " [0.62593506 0.49758604 0.03948458 0.73805377 0.45162348]\n",
-      " [0.93877677 0.01413113 0.31624175 0.16355324 0.04810857]\n",
-      " [0.76496508 0.23980418 0.88955593 0.94045016 0.38946281]\n",
-      " [0.07466562 0.33541515 0.28967001 0.03664556 0.65185675]] \n",
+      "[[0.65003337 0.00969795 0.51755718 0.12056966 0.98800904]\n",
+      " [0.28205336 0.25314011 0.08230002 0.04768282 0.42372167]\n",
+      " [0.91771188 0.8662492  0.34550165 0.57290916 0.66774025]\n",
+      " [0.12833394 0.32253131 0.23299593 0.2697578  0.20994982]\n",
+      " [0.80223568 0.88153013 0.95294165 0.96739439 0.06743692]\n",
+      " [0.93834359 0.86327429 0.32940206 0.89496798 0.89563055]] \n",
       "\n",
-      "[[0.72482204 0.3604693  0.78444886 0.4541903  0.        ]\n",
-      " [0.49758604 0.03948458 0.7380538  0.45162347 0.        ]\n",
-      " [0.         0.         0.         0.         0.        ]\n",
-      " [0.         0.         0.         0.         0.        ]\n",
-      " [0.         0.         0.         0.         0.        ]\n",
-      " [0.         0.         0.         0.         0.        ]] \n",
+      "[[0.2531401 0.        0.        0.        0.       ]\n",
+      " [0.8662492 0.        0.        0.        0.       ]\n",
+      " [0.        0.        0.        0.        0.       ]\n",
+      " [0.        0.        0.        0.        0.       ]\n",
+      " [0.        0.        0.        0.        0.       ]\n",
+      " [0.        0.        0.        0.        0.       ]] \n",
       "\n",
-      "[[0.72482204 0.3604693  0.78444886 0.4541903  0.        ]\n",
-      " [0.49758604 0.03948458 0.7380538  0.45162347 0.        ]\n",
-      " [0.01413113 0.31624174 0.16355324 0.04810857 0.        ]\n",
-      " [0.23980418 0.88955593 0.94045013 0.3894628  0.        ]\n",
-      " [0.33541515 0.28967002 0.03664556 0.6518567  0.        ]\n",
+      "[[0.2531401  0.08230002 0.04768282 0.42372167 0.        ]\n",
+      " [0.8662492  0.34550166 0.5729092  0.6677402  0.        ]\n",
+      " [0.3225313  0.23299593 0.2697578  0.20994982 0.        ]\n",
+      " [0.8815301  0.95294166 0.9673944  0.06743692 0.        ]\n",
+      " [0.8632743  0.32940206 0.894968   0.89563054 0.        ]\n",
       " [0.         0.         0.         0.         0.        ]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/xs2445/envs/cudaEnv/lib/python3.6/site-packages/ipykernel_launcher.py:57: UserWarning: The CUDA compiler succeeded, but said the following:\n",
+      "kernel.cu(14): warning: variable \"n_h\" was declared but never referenced\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -190,50 +201,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.25858879 0.76644024 0.23690224 ... 0.10312783 0.802767   0.2767137 ]\n",
-      " [0.48213143 0.43717487 0.24105782 ... 0.42669798 0.75363248 0.88913923]\n",
-      " [0.96097627 0.33534357 0.14011016 ... 0.31211257 0.05761873 0.35872807]\n",
-      " ...\n",
-      " [0.94446634 0.94470696 0.26177127 ... 0.25845082 0.92723354 0.9162604 ]\n",
-      " [0.95204508 0.47338191 0.06090975 ... 0.23428814 0.87261467 0.15879089]\n",
-      " [0.05189116 0.74409996 0.25270494 ... 0.71068001 0.58741064 0.44194069]]\n",
-      "[[4.37174857e-01 2.41057813e-01 7.93456316e-01 ... 7.53632486e-01\n",
-      "  8.89139235e-01 0.00000000e+00]\n",
-      " [3.35343570e-01 1.40110165e-01 6.23291790e-01 ... 5.76187335e-02\n",
-      "  3.58728081e-01 0.00000000e+00]\n",
-      " [5.04994333e-01 8.71350057e-04 1.13818854e-01 ... 6.85880005e-01\n",
-      "  8.24093997e-01 0.00000000e+00]\n",
-      " ...\n",
-      " [4.73381907e-01 6.09097518e-02 2.18991861e-02 ... 8.72614682e-01\n",
-      "  1.58790886e-01 0.00000000e+00]\n",
-      " [7.44099975e-01 2.52704948e-01 7.44353354e-01 ... 5.87410629e-01\n",
-      "  4.41940695e-01 0.00000000e+00]\n",
-      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 ... 0.00000000e+00\n",
-      "  0.00000000e+00 0.00000000e+00]]\n",
-      "[[4.37174857e-01 2.41057813e-01 7.93456316e-01 ... 7.53632486e-01\n",
-      "  8.89139235e-01 0.00000000e+00]\n",
-      " [3.35343570e-01 1.40110165e-01 6.23291790e-01 ... 5.76187335e-02\n",
-      "  3.58728081e-01 0.00000000e+00]\n",
-      " [5.04994333e-01 8.71350057e-04 1.13818854e-01 ... 6.85880005e-01\n",
-      "  8.24093997e-01 0.00000000e+00]\n",
-      " ...\n",
-      " [4.73381907e-01 6.09097518e-02 2.18991861e-02 ... 8.72614682e-01\n",
-      "  1.58790886e-01 0.00000000e+00]\n",
-      " [7.44099975e-01 2.52704948e-01 7.44353354e-01 ... 5.87410629e-01\n",
-      "  4.41940695e-01 0.00000000e+00]\n",
-      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 ... 0.00000000e+00\n",
-      "  0.00000000e+00 0.00000000e+00]]\n"
+      "( 8 , 18 )    258    24\n",
+      "( 8 , 19 )    259    23\n",
+      "( 8 , 20 )    260    22\n",
+      "( 8 , 21 )    261    21\n",
+      "( 8 , 22 )    262    20\n",
+      "\n",
+      "\n",
+      "( 9 , 18 )    288    19\n",
+      "( 9 , 19 )    289    18\n",
+      "( 9 , 20 )    290    17\n",
+      "( 9 , 21 )    291    16\n",
+      "( 9 , 22 )    292    15\n",
+      "\n",
+      "\n",
+      "( 10 , 18 )    318    14\n",
+      "( 10 , 19 )    319    13\n",
+      "( 10 , 20 )    320    12\n",
+      "( 10 , 21 )    321    11\n",
+      "( 10 , 22 )    322    10\n",
+      "\n",
+      "\n",
+      "( 11 , 18 )    348    9\n",
+      "( 11 , 19 )    349    8\n",
+      "( 11 , 20 )    350    7\n",
+      "( 11 , 21 )    351    6\n",
+      "( 11 , 22 )    352    5\n",
+      "\n",
+      "\n",
+      "( 12 , 18 )    378    4\n",
+      "( 12 , 19 )    379    3\n",
+      "( 12 , 20 )    380    2\n",
+      "( 12 , 21 )    381    1\n",
+      "( 12 , 22 )    382    0\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "for(int i=0; i<mask_w; i++){\n",
+    "    // x coordinate in mask\n",
+    "    int row_mask = mask_w - 1 - i\n",
+    "    // x coordinate in N\n",
+    "    int row_n = row_start + i;\n",
+    "\n",
+    "    for(int j=0; j<mask_w; j++){\n",
+    "        // y coordinate in mask\n",
+    "        int col_mask = mask_w - 1 - j\n",
+    "        // y coordinate in N\n",
+    "        int col_n = col_start + j;\n",
+    "\n",
+    "        // if in the range of N\n",
+    "        if(col_n>=0 && col_n<n_w && row_n>=0 && row_n<n_h ){\n",
+    "            p_value += N[row_n*n_w+col_n] * M[row_mask*mask_w+col_mask];\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "}\n",
+    "\"\"\"\n",
+    "mask_w = 5\n",
+    "height, width = 20,30\n",
+    "row, col = 10,20\n",
+    "row_n_start = row - mask_w//2\n",
+    "col_n_start = col - mask_w//2\n",
+    "for i in range(mask_w):\n",
+    "    row_mask = mask_w - 1 - i\n",
+    "    row_n = row_n_start + i\n",
+    "    for j in range(mask_w):\n",
+    "        col_mask = mask_w - 1 - j\n",
+    "        col_n = col_n_start + j\n",
+    "        if (row_n>=0) & (row_n<height) & (col_n>=0) & (col_n<width):\n",
+    "            # print(row_n,'  ', col_n, '  ', row_mask, '  ', col_mask)\n",
+    "            print(\"(\", row_n, ',', col_n, ')', '  ', row_n*width+col_n, '  ', row_mask*mask_w+col_mask)\n",
+    "    print('\\n')\n",
+    "\n",
     "\n"
    ]
   },
@@ -263,6 +313,177 @@
     "M = np.array(([0,0,0],[0,1,0],[0,0,0]))\n",
     "print(M)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "import pycuda.driver as cuda\n",
+    "import pycuda.autoinit\n",
+    "from pycuda.compiler import SourceModule\n",
+    "\n",
+    "# DEVICE SETUP\n",
+    "BLOCK_SIZE = 32  # Max 32. 32**2 = 1024, max for GTX1060\n",
+    "\n",
+    "def getSourceModule():\n",
+    "    kernel = \"\"\"\n",
+    "    __global__ \n",
+    "    void conv(const float *A, const float *B, int aw, int ah, int bw, int bh, int b_sum, float *C){\n",
+    "\n",
+    "        /*Get row and column to operate on from thread coordinates*/\n",
+    "        int tx = threadIdx.x;\n",
+    "        int ty = threadIdx.y;\n",
+    "        \n",
+    "        int bx = blockIdx.x;\n",
+    "        int by = blockIdx.y;\n",
+    "        \n",
+    "        int row = by*blockDim.y + ty;\n",
+    "        int col = bx*blockDim.x + tx;\n",
+    "        \n",
+    "        /*Calculate \"padding\" radius of convolution kernel (distance around central pixel)*/\n",
+    "        int pw = (bw-1)/2;\n",
+    "        int ph = (bh-1)/2;\n",
+    "\n",
+    "        /*If within the range of C (ie A - padding)*/\n",
+    "        if( row < (ah-2*ph) && col < (aw-2*pw) ) {\n",
+    "            \n",
+    "            /*Set initial pixel value*/\n",
+    "            int val = 0;\n",
+    "            \n",
+    "            /*For each vertical position on the kernel matrix, relative to the central pixel*/\n",
+    "            for(int i=-ph; i<=ph; i=i+1){\n",
+    "                /*Calculate zero-indexed row ID on kernel matrix*/\n",
+    "                int b_row = i+ph; \n",
+    "\n",
+    "                /*For each horizontal position on the kernel matrix, relative to the central pixel*/\n",
+    "                for(int j=-pw; j<=pw; j=j+1){\n",
+    "                    /*Calculate zero-indexed column ID on kernel matrix*/\n",
+    "                    int b_col = j+pw;\n",
+    "\n",
+    "                    /*Add product of kernel value and corresponding image value to running total*/\n",
+    "                    val += A[ (row+ph +i)*aw + (col+pw +j) ] * B[ b_row*bw + b_col ];\n",
+    "                }\n",
+    "            }\n",
+    "            \n",
+    "            /*Copy appropriately normalised resulting pixel value to position on C matrix*/\n",
+    "            C[row*(aw-2*pw) + col] = val/b_sum;\n",
+    "        }\n",
+    "    }\n",
+    "    \"\"\"\n",
+    "    return SourceModule(kernel)\n",
+    "    \n",
+    "# Compile kernel\n",
+    "mod = getSourceModule()\n",
+    "\n",
+    "# Get functions\n",
+    "conv = mod.get_function(\"conv\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def convolve(a, b):\n",
+    "    global BLOCK_SIZE\n",
+    "    global conv\n",
+    "    \n",
+    "    a, b = [np.array(i).astype(np.float32) for i in [a, b]]\n",
+    "    \n",
+    "    # Matrix A \n",
+    "    aw = np.int32(a.shape[1])  # Widthof in matrix\n",
+    "    ah = np.int32(a.shape[0])  # Height of in matrix\n",
+    "    \n",
+    "    # Matrix B (kernel)\n",
+    "    bw = np.int32(b.shape[1])  # Widthof in matrix\n",
+    "    if bw % 2 == 0:\n",
+    "        print(\"Kernel width is not an odd number! Strange things will happen...\")\n",
+    "    bh = np.int32(b.shape[0])  # Height of in matrix\n",
+    "    if bh % 2 == 0:\n",
+    "        print(\"Kernel height is not an odd number! Strange things will happen...\")\n",
+    "    b_sum = np.int32(np.absolute(b).sum())\n",
+    "    \n",
+    "    # Matrix C, subtract 2*padding, *2 because it's taken off all sides\n",
+    "    c = np.empty([ah-(bh-1), aw-(bw-1)])\n",
+    "    c = c.astype(np.float32)\n",
+    "    \n",
+    "    # Allocate memory on device\n",
+    "    a_gpu = cuda.mem_alloc(a.nbytes)\n",
+    "    b_gpu = cuda.mem_alloc(b.nbytes)\n",
+    "    c_gpu = cuda.mem_alloc(c.nbytes)\n",
+    "    \n",
+    "    # Copy matrix to memory\n",
+    "    cuda.memcpy_htod(a_gpu, a)\n",
+    "    cuda.memcpy_htod(b_gpu, b)\n",
+    "\n",
+    "    # Set grid size from A matrix\n",
+    "    grid = (int(aw/BLOCK_SIZE+(0 if aw % BLOCK_SIZE is 0 else 1)), \n",
+    "            int(ah/BLOCK_SIZE+(0 if ah % BLOCK_SIZE is 0 else 1)), \n",
+    "                          1)\n",
+    "    \n",
+    "    # Call gpu function\n",
+    "    conv(a_gpu, b_gpu, aw, ah, bw, bh, b_sum, c_gpu, block=(BLOCK_SIZE, BLOCK_SIZE, 1), grid=grid)\n",
+    "    \n",
+    "    # Copy back the result\n",
+    "    cuda.memcpy_dtoh(c, c_gpu)\n",
+    "    \n",
+    "    # Free memory. May not be useful? Ask about this.\n",
+    "    a_gpu.free()\n",
+    "    b_gpu.free()\n",
+    "    c_gpu.free()\n",
+    "    \n",
+    "    # Return the result\n",
+    "    return c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[6.23089391 0.12648244 9.84181206 ... 4.38169318 9.23371247 8.44490616]\n",
+      " [9.0537361  1.22756095 1.12970777 ... 1.99929716 8.66201555 1.32353132]\n",
+      " [2.44116335 6.99184915 3.61355678 ... 8.37585567 1.13886745 2.69067491]\n",
+      " ...\n",
+      " [0.43791003 3.87850462 1.00171959 ... 4.45572115 3.38204623 7.43212451]\n",
+      " [1.80912737 0.2074232  5.94952211 ... 9.50651707 7.78914735 1.64754239]\n",
+      " [1.48632327 3.8389076  7.07190159 ... 5.33207501 1.98681875 7.21444586]] \n",
+      "\n",
+      "[[3. 3. 5. ... 5. 4. 4.]\n",
+      " [3. 4. 4. ... 4. 6. 4.]\n",
+      " [2. 3. 3. ... 5. 6. 5.]\n",
+      " ...\n",
+      " [4. 5. 5. ... 5. 5. 5.]\n",
+      " [3. 4. 4. ... 5. 5. 5.]\n",
+      " [2. 3. 5. ... 4. 5. 6.]] \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = np.random.rand(30,40)*10\n",
+    "M = np.random.rand(3,3)*10\n",
+    "# M = np.array([[1,0,0],[0,0,0],[0,0,0]])\n",
+    "# print(M)\n",
+    "P_cu = convolve(N,M)\n",
+    "# P_sp = convolve2d(N.astype(np.float32), M.astype(np.float32), mode='full')\n",
+    "# print(np.allclose(P_cu, P_sp))\n",
+    "print(N,'\\n')\n",
+    "print(P_cu,'\\n')\n",
+    "# print(P_sp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
