--- a/e4040/hw2/task3_cnn.ipynb
+++ b/e4040/hw2/task3_cnn.ipynb
@@ -53,28 +53,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "%matplotlib inline\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.6.0\n"
+     ]
+    }
+   ],
    "source": [
     "print(tf.__version__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tf.test.gpu_device_name()"
    ]
@@ -99,9 +121,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your feedforward result (size :(2, 3, 3, 5)) is: \n",
+      "[[[[-0.46748472 -0.36306972 -0.25865471 -0.15423971 -0.0498247 ]\n",
+      "   [-0.35593359 -0.26059401 -0.16525443 -0.06991486  0.02542472]\n",
+      "   [-0.15935891 -0.05332115  0.05271662  0.15875438  0.26479215]]\n",
+      "\n",
+      "  [[ 0.12150907  0.22171692  0.32192477  0.42213263  0.52234048]\n",
+      "   [ 0.54066763  0.63030502  0.7199424   0.80957979  0.89921717]\n",
+      "   [ 0.4376495   0.5402915   0.64293349  0.74557548  0.84821747]]\n",
+      "\n",
+      "  [[ 0.21218071  0.32470951  0.43723831  0.5497671   0.6622959 ]\n",
+      "   [ 0.51751628  0.62502655  0.73253681  0.84004708  0.94755735]\n",
+      "   [ 0.32557548  0.43972704  0.55387859  0.66803015  0.78218171]]]\n",
+      "\n",
+      "\n",
+      " [[[-0.27004908 -0.15211109 -0.03417309  0.0837649   0.20170289]\n",
+      "   [-0.21191375 -0.09628969  0.01933437  0.13495843  0.25058249]\n",
+      "   [-0.16476811 -0.04520735  0.0743534   0.19391415  0.31347491]]\n",
+      "\n",
+      "  [[-0.03873836  0.08175398  0.20224632  0.32273866  0.44323099]\n",
+      "   [ 0.07209606  0.19216017  0.31222428  0.43228839  0.5523525 ]\n",
+      "   [-0.02686517  0.0960613   0.21898778  0.34191425  0.46484073]]\n",
+      "\n",
+      "  [[-0.19891816 -0.07286637  0.05318542  0.1792372   0.30528899]\n",
+      "   [-0.25126565 -0.1234709   0.00432385  0.1321186   0.25991335]\n",
+      "   [-0.28836823 -0.16069368 -0.03301913  0.09465541  0.22232996]]]]\n"
+     ]
+    }
+   ],
    "source": [
     "# tf 2.4.0 implementation\n",
     "from utils.layer_funcs import conv2d_forward\n",
@@ -129,9 +183,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is your feedforward correct? True\n"
+     ]
+    }
+   ],
    "source": [
     "######################################################\n",
     "# Verification/checking code. Do not modify it       #\n",
@@ -548,7 +610,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
