--- a/e4040/hw2/task3_cnn.ipynb
+++ b/e4040/hw2/task3_cnn.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
        "''"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,26 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(60000, 28, 28, 1)\n",
-      "(60000,)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(x_train.shape)\n",
-    "print(y_train.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,20 +711,21 @@
     "def create_model():\n",
     "    model = tf.keras.models.Sequential()\n",
     "    \n",
-    "    InputShape = (28,28,1)\n",
     "    NumClasses = 10\n",
     "    \n",
-    "    model.add(Conv2D(20, 5, padding='same', input_shape=InputShape, activation='relu'))\n",
+    "    model.add(Conv2D(filters=32, kernel_size=(5,5), padding='same', input_shape=(28,28,1), activation='relu'))\n",
     "    \n",
     "    model.add(MaxPool2D(pool_size=(2,2), strides=(2,2)))\n",
     "    \n",
-    "    model.add(Conv2D(50, 5, padding='same', activation='relu'))\n",
+    "    model.add(Conv2D(filters=48, kernel_size=(5,5), padding='valid', activation='relu'))\n",
     "    \n",
     "    model.add(MaxPool2D(pool_size=(2,2), strides=(2,2)))\n",
     "    \n",
     "    model.add(Flatten())\n",
     "    \n",
-    "    model.add(Dense(500, activation='relu'))\n",
+    "    model.add(Dense(256, activation='relu'))\n",
+    "    \n",
+    "    model.add(Dense(84, activation='relu'))\n",
     "    \n",
     "    model.add(Dense(NumClasses, activation='relu'))\n",
     "    \n",
@@ -754,7 +736,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d (Conv2D)              (None, 28, 28, 32)        832       \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d (MaxPooling2D) (None, 14, 14, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_1 (Conv2D)            (None, 10, 10, 48)        38448     \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_1 (MaxPooling2 (None, 5, 5, 48)          0         \n",
+      "_________________________________________________________________\n",
+      "flatten (Flatten)            (None, 1200)              0         \n",
+      "_________________________________________________________________\n",
+      "dense (Dense)                (None, 256)               307456    \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 84)                21588     \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 10)                850       \n",
+      "_________________________________________________________________\n",
+      "softmax (Softmax)            (None, 10)                0         \n",
+      "=================================================================\n",
+      "Total params: 369,174\n",
+      "Trainable params: 369,174\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tensorflow.keras.optimizers import Adam\n",
+    "adam = Adam(learning_rate=1e-3)\n",
+    "#Create the model, compile the model, and fit it\n",
+    "model_test = create_model()\n",
+    "model_test.compile(optimizer=adam,\n",
+    "              loss='sparse_categorical_crossentropy',\n",
+    "              metrics=['accuracy'])\n",
+    "log_dir = \"logs/fit/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
+    "tensorboard_callback = tf.keras.callbacks.TensorBoard(log_dir=log_dir, histogram_freq=1)\n",
+    "model_test.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -762,46 +795,39 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "235/235 [==============================] - 88s 373ms/step - loss: 1.3441 - accuracy: 0.5452 - val_loss: 1.2262 - val_accuracy: 0.5850\n",
+      "235/235 [==============================] - 62s 262ms/step - loss: 0.9129 - accuracy: 0.6649 - val_loss: 0.6542 - val_accuracy: 0.7502\n",
       "Epoch 2/10\n",
-      "235/235 [==============================] - 87s 372ms/step - loss: 1.1931 - accuracy: 0.5994 - val_loss: 1.1836 - val_accuracy: 0.6061\n",
+      "235/235 [==============================] - 67s 287ms/step - loss: 0.4292 - accuracy: 0.8430 - val_loss: 0.3637 - val_accuracy: 0.8691\n",
       "Epoch 3/10\n",
-      "235/235 [==============================] - 89s 377ms/step - loss: 1.1507 - accuracy: 0.6136 - val_loss: 1.1562 - val_accuracy: 0.6074\n",
+      "235/235 [==============================] - 63s 267ms/step - loss: 0.3113 - accuracy: 0.8871 - val_loss: 0.3090 - val_accuracy: 0.8874\n",
       "Epoch 4/10\n",
-      "235/235 [==============================] - 88s 375ms/step - loss: 1.1272 - accuracy: 0.6212 - val_loss: 1.1432 - val_accuracy: 0.6075\n",
+      "235/235 [==============================] - 64s 273ms/step - loss: 0.2737 - accuracy: 0.8991 - val_loss: 0.3169 - val_accuracy: 0.8835\n",
       "Epoch 5/10\n",
-      "235/235 [==============================] - 88s 376ms/step - loss: 1.1119 - accuracy: 0.6273 - val_loss: 1.1340 - val_accuracy: 0.6243\n",
+      "235/235 [==============================] - 69s 292ms/step - loss: 0.2510 - accuracy: 0.9097 - val_loss: 0.2926 - val_accuracy: 0.8920\n",
       "Epoch 6/10\n",
-      "235/235 [==============================] - 88s 376ms/step - loss: 1.0979 - accuracy: 0.6325 - val_loss: 1.1316 - val_accuracy: 0.6265\n",
+      "235/235 [==============================] - 70s 297ms/step - loss: 0.2288 - accuracy: 0.9153 - val_loss: 0.2865 - val_accuracy: 0.8938\n",
       "Epoch 7/10\n",
-      "235/235 [==============================] - 88s 373ms/step - loss: 1.0843 - accuracy: 0.6388 - val_loss: 1.1310 - val_accuracy: 0.6218\n",
+      "235/235 [==============================] - 66s 280ms/step - loss: 0.2131 - accuracy: 0.9220 - val_loss: 0.2579 - val_accuracy: 0.9075\n",
       "Epoch 8/10\n",
-      "235/235 [==============================] - 88s 374ms/step - loss: 1.0733 - accuracy: 0.6416 - val_loss: 1.1253 - val_accuracy: 0.6322\n",
+      "235/235 [==============================] - 62s 266ms/step - loss: 0.1958 - accuracy: 0.9293 - val_loss: 0.2482 - val_accuracy: 0.9109\n",
       "Epoch 9/10\n",
-      "235/235 [==============================] - 87s 371ms/step - loss: 1.0622 - accuracy: 0.6462 - val_loss: 1.1192 - val_accuracy: 0.6265\n",
+      "235/235 [==============================] - 62s 264ms/step - loss: 0.1832 - accuracy: 0.9336 - val_loss: 0.2434 - val_accuracy: 0.9115\n",
       "Epoch 10/10\n",
-      "235/235 [==============================] - 85s 362ms/step - loss: 1.0493 - accuracy: 0.6513 - val_loss: 1.1235 - val_accuracy: 0.6316\n"
+      "235/235 [==============================] - 62s 263ms/step - loss: 0.1696 - accuracy: 0.9382 - val_loss: 0.2432 - val_accuracy: 0.9137\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f85605eee10>"
+       "<keras.callbacks.History at 0x7f1790218898>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Create the model, compile the model, and fit it\n",
-    "model_test = create_model()\n",
-    "model_test.compile(optimizer='adam',\n",
-    "              loss='sparse_categorical_crossentropy',\n",
-    "              metrics=['accuracy'])\n",
-    "log_dir = \"logs/fit/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
-    "tensorboard_callback = tf.keras.callbacks.TensorBoard(log_dir=log_dir, histogram_freq=1)\n",
     "model_test.fit(x=x_train, \n",
     "          y=y_train,\n",
     "          batch_size=256,\n",
@@ -820,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -844,35 +870,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_3\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_1 (Conv2D)            (None, 28, 28, 20)        520       \n",
+      "conv2d (Conv2D)              (None, 28, 28, 32)        832       \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 14, 14, 20)        0         \n",
+      "max_pooling2d (MaxPooling2D) (None, 14, 14, 32)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_2 (Conv2D)            (None, 14, 14, 50)        25050     \n",
+      "conv2d_1 (Conv2D)            (None, 10, 10, 48)        38448     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_2 (MaxPooling2 (None, 7, 7, 50)          0         \n",
+      "max_pooling2d_1 (MaxPooling2 (None, 5, 5, 48)          0         \n",
       "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 2450)              0         \n",
+      "flatten (Flatten)            (None, 1200)              0         \n",
       "_________________________________________________________________\n",
-      "dense (Dense)                (None, 500)               1225500   \n",
+      "dense (Dense)                (None, 256)               307456    \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 10)                5010      \n",
+      "dense_1 (Dense)              (None, 84)                21588     \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 10)                850       \n",
       "_________________________________________________________________\n",
       "softmax (Softmax)            (None, 10)                0         \n",
       "=================================================================\n",
-      "Total params: 1,256,080\n",
-      "Trainable params: 1,256,080\n",
+      "Total params: 369,174\n",
+      "Trainable params: 369,174\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
       "None\n"
@@ -894,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +936,7 @@
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 3202), started 0:02:49 ago. (Use '!kill 3202' to kill it.)"
+       "Reusing TensorBoard on port 6006 (pid 6520), started 0:01:12 ago. (Use '!kill 6520' to kill it.)"
       ]
      },
      "metadata": {},
@@ -918,11 +946,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-26e7f61cdd355f30\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-4fb1d408bebfefd2\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-26e7f61cdd355f30\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-4fb1d408bebfefd2\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -944,7 +972,8 @@
    "source": [
     "# Load the TensorBoard notebook extension\n",
     "%load_ext tensorboard\n",
-    "%tensorboard --logdir logs/fit --bind_all"
+    "%tensorboard --logdir logs/fit --bind_all\n",
+    "# %tensorboard --logdir logs/fit --host 0.0.0.0"
    ]
   },
   {
