--- a/e4040/hw2/task1-optimization.ipynb
+++ b/e4040/hw2/task1-optimization.ipynb
@@ -730,7 +730,8 @@
    "hash": "50286e954820f4eea984950900e1b0d0edcf026073fd0a170f2369702fdf1a29"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit ('tf26': conda)",
+   "display_name": "Python 3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -743,7 +744,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
