--- a/e4040/hw2/task3_cnn.ipynb
+++ b/e4040/hw2/task3_cnn.ipynb
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,11 +721,15 @@
     "    \n",
     "    model.add(MaxPool2D(pool_size=(2,2), strides=(2,2)))\n",
     "    \n",
+    "    model.add(Conv2D(filters=100, kernel_size=(3,3), padding='valid', activation='relu'))\n",
+    "    \n",
+    "    model.add(Conv2D(filters=50, kernel_size=(3,3), padding='valid', activation='relu'))\n",
+    "    \n",
     "    model.add(Flatten())\n",
     "    \n",
-    "    model.add(Dense(256, activation='relu'))\n",
+    "    # model.add(Dense(50, activation='relu'))\n",
     "    \n",
-    "    model.add(Dense(84, activation='relu'))\n",
+    "    # model.add(Dense(64, activation='relu'))\n",
     "    \n",
     "    model.add(Dense(NumClasses, activation='relu'))\n",
     "    \n",
@@ -736,37 +740,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_2\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d (Conv2D)              (None, 28, 28, 32)        832       \n",
+      "conv2d_7 (Conv2D)            (None, 28, 28, 32)        832       \n",
       "_________________________________________________________________\n",
-      "max_pooling2d (MaxPooling2D) (None, 14, 14, 32)        0         \n",
+      "max_pooling2d_4 (MaxPooling2 (None, 14, 14, 32)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_1 (Conv2D)            (None, 10, 10, 48)        38448     \n",
+      "conv2d_8 (Conv2D)            (None, 10, 10, 48)        38448     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 5, 5, 48)          0         \n",
+      "max_pooling2d_5 (MaxPooling2 (None, 5, 5, 48)          0         \n",
       "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 1200)              0         \n",
+      "conv2d_9 (Conv2D)            (None, 3, 3, 100)         43300     \n",
       "_________________________________________________________________\n",
-      "dense (Dense)                (None, 256)               307456    \n",
+      "conv2d_10 (Conv2D)           (None, 1, 1, 50)          45050     \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 84)                21588     \n",
+      "flatten_1 (Flatten)          (None, 50)                0         \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 10)                850       \n",
+      "dense (Dense)                (None, 10)                510       \n",
       "_________________________________________________________________\n",
-      "softmax (Softmax)            (None, 10)                0         \n",
+      "softmax_1 (Softmax)          (None, 10)                0         \n",
       "=================================================================\n",
-      "Total params: 369,174\n",
-      "Trainable params: 369,174\n",
+      "Total params: 128,140\n",
+      "Trainable params: 128,140\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -787,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -795,34 +799,34 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "235/235 [==============================] - 62s 262ms/step - loss: 0.9129 - accuracy: 0.6649 - val_loss: 0.6542 - val_accuracy: 0.7502\n",
+      "235/235 [==============================] - 68s 286ms/step - loss: 0.7061 - accuracy: 0.7473 - val_loss: 0.4906 - val_accuracy: 0.8169\n",
       "Epoch 2/10\n",
-      "235/235 [==============================] - 67s 287ms/step - loss: 0.4292 - accuracy: 0.8430 - val_loss: 0.3637 - val_accuracy: 0.8691\n",
+      "235/235 [==============================] - 66s 281ms/step - loss: 0.4063 - accuracy: 0.8539 - val_loss: 0.3839 - val_accuracy: 0.8582\n",
       "Epoch 3/10\n",
-      "235/235 [==============================] - 63s 267ms/step - loss: 0.3113 - accuracy: 0.8871 - val_loss: 0.3090 - val_accuracy: 0.8874\n",
+      "235/235 [==============================] - 66s 283ms/step - loss: 0.3429 - accuracy: 0.8768 - val_loss: 0.3473 - val_accuracy: 0.8755\n",
       "Epoch 4/10\n",
-      "235/235 [==============================] - 64s 273ms/step - loss: 0.2737 - accuracy: 0.8991 - val_loss: 0.3169 - val_accuracy: 0.8835\n",
+      "235/235 [==============================] - 66s 280ms/step - loss: 0.3103 - accuracy: 0.8880 - val_loss: 0.3348 - val_accuracy: 0.8796\n",
       "Epoch 5/10\n",
-      "235/235 [==============================] - 69s 292ms/step - loss: 0.2510 - accuracy: 0.9097 - val_loss: 0.2926 - val_accuracy: 0.8920\n",
+      "235/235 [==============================] - 67s 284ms/step - loss: 0.2806 - accuracy: 0.8993 - val_loss: 0.3089 - val_accuracy: 0.8868\n",
       "Epoch 6/10\n",
-      "235/235 [==============================] - 70s 297ms/step - loss: 0.2288 - accuracy: 0.9153 - val_loss: 0.2865 - val_accuracy: 0.8938\n",
+      "235/235 [==============================] - 66s 279ms/step - loss: 0.2617 - accuracy: 0.9056 - val_loss: 0.3005 - val_accuracy: 0.8899\n",
       "Epoch 7/10\n",
-      "235/235 [==============================] - 66s 280ms/step - loss: 0.2131 - accuracy: 0.9220 - val_loss: 0.2579 - val_accuracy: 0.9075\n",
+      "235/235 [==============================] - 64s 273ms/step - loss: 0.2509 - accuracy: 0.9097 - val_loss: 0.3069 - val_accuracy: 0.8880\n",
       "Epoch 8/10\n",
-      "235/235 [==============================] - 62s 266ms/step - loss: 0.1958 - accuracy: 0.9293 - val_loss: 0.2482 - val_accuracy: 0.9109\n",
+      "235/235 [==============================] - 65s 275ms/step - loss: 0.2321 - accuracy: 0.9158 - val_loss: 0.2732 - val_accuracy: 0.9042\n",
       "Epoch 9/10\n",
-      "235/235 [==============================] - 62s 264ms/step - loss: 0.1832 - accuracy: 0.9336 - val_loss: 0.2434 - val_accuracy: 0.9115\n",
+      "235/235 [==============================] - 65s 276ms/step - loss: 0.2220 - accuracy: 0.9193 - val_loss: 0.2557 - val_accuracy: 0.9088\n",
       "Epoch 10/10\n",
-      "235/235 [==============================] - 62s 263ms/step - loss: 0.1696 - accuracy: 0.9382 - val_loss: 0.2432 - val_accuracy: 0.9137\n"
+      "235/235 [==============================] - 66s 279ms/step - loss: 0.2053 - accuracy: 0.9246 - val_loss: 0.2634 - val_accuracy: 0.9072\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f1790218898>"
+       "<keras.callbacks.History at 0x7f455e183f98>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -870,37 +874,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_2\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d (Conv2D)              (None, 28, 28, 32)        832       \n",
+      "conv2d_7 (Conv2D)            (None, 28, 28, 32)        832       \n",
       "_________________________________________________________________\n",
-      "max_pooling2d (MaxPooling2D) (None, 14, 14, 32)        0         \n",
+      "max_pooling2d_4 (MaxPooling2 (None, 14, 14, 32)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_1 (Conv2D)            (None, 10, 10, 48)        38448     \n",
+      "conv2d_8 (Conv2D)            (None, 10, 10, 48)        38448     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 5, 5, 48)          0         \n",
+      "max_pooling2d_5 (MaxPooling2 (None, 5, 5, 48)          0         \n",
       "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 1200)              0         \n",
+      "conv2d_9 (Conv2D)            (None, 3, 3, 100)         43300     \n",
       "_________________________________________________________________\n",
-      "dense (Dense)                (None, 256)               307456    \n",
+      "conv2d_10 (Conv2D)           (None, 1, 1, 50)          45050     \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 84)                21588     \n",
+      "flatten_1 (Flatten)          (None, 50)                0         \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 10)                850       \n",
+      "dense (Dense)                (None, 10)                510       \n",
       "_________________________________________________________________\n",
-      "softmax (Softmax)            (None, 10)                0         \n",
+      "softmax_1 (Softmax)          (None, 10)                0         \n",
       "=================================================================\n",
-      "Total params: 369,174\n",
-      "Trainable params: 369,174\n",
+      "Total params: 128,140\n",
+      "Trainable params: 128,140\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
       "None\n"
@@ -922,35 +926,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The tensorboard extension is already loaded. To reload it, use:\n",
-      "  %reload_ext tensorboard\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 6520), started 0:01:12 ago. (Use '!kill 6520' to kill it.)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-4fb1d408bebfefd2\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-b2755e7460c5420e\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-4fb1d408bebfefd2\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-b2755e7460c5420e\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -984,18 +971,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "![Tensorboard_solution](./utils/notebook_images/solution-task4-2.png)"
+   ]
   }
  ],
  "metadata": {
