updated-4040hw2task5

--- a/e6885/Coding Assignment - FrozenLake/FrozenLake.ipynb
+++ b/e6885/Coding Assignment - FrozenLake/FrozenLake.ipynb
@@ -797,13 +797,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "0j9ZEkPyWXzj"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "State values:\n",
+      "[0.82352513 0.82352369 0.82352267 0.82352214 0.82352544 0.\n",
+      " 0.5294087  0.         0.82352604 0.82352689 0.76470365 0.\n",
+      " 0.         0.88235115 0.94117554 0.        ]\n",
+      "Number of iterations to converge = 500\n"
+     ]
+    }
+   ],
    "source": [
     "from RLalgs.vi import value_iteration\n",
     "V, policy, numIterations = value_iteration(env = env.env, gamma = 1, max_iteration = 500, theta = 1e-7)\n",
@@ -827,18 +839,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "rNcCXWuzWXzs"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (Left)\n",
+      "SFFF\n",
+      "\u001b[41mF\u001b[0mHFH\n",
+      "FFFH\n",
+      "HFFG\n",
+      "  (Left)\n",
+      "SFFF\n",
+      "\u001b[41mF\u001b[0mHFH\n",
+      "FFFH\n",
+      "HFFG\n",
+      "  (Left)\n",
+      "SFFF\n",
+      "FHFH\n",
+      "\u001b[41mF\u001b[0mFFH\n",
+      "HFFG\n",
+      "  (Up)\n",
+      "SFFF\n",
+      "FHFH\n",
+      "F\u001b[41mF\u001b[0mFH\n",
+      "HFFG\n",
+      "  (Down)\n",
+      "SFFF\n",
+      "FHFH\n",
+      "FFFH\n",
+      "H\u001b[41mF\u001b[0mFG\n",
+      "  (Right)\n",
+      "SFFF\n",
+      "FHFH\n",
+      "FFFH\n",
+      "HF\u001b[41mF\u001b[0mG\n",
+      "  (Down)\n",
+      "SFFF\n",
+      "FHFH\n",
+      "FFFH\n",
+      "H\u001b[41mF\u001b[0mFG\n",
+      "  (Right)\n",
+      "SFFF\n",
+      "FHFH\n",
+      "FFFH\n",
+      "H\u001b[41mF\u001b[0mFG\n",
+      "  (Right)\n",
+      "SFFF\n",
+      "FHFH\n",
+      "FFFH\n",
+      "HF\u001b[41mF\u001b[0mG\n",
+      "  (Down)\n",
+      "SFFF\n",
+      "FHFH\n",
+      "FFFH\n",
+      "HF\u001b[41mF\u001b[0mG\n",
+      "  (Down)\n",
+      "SFFF\n",
+      "FHFH\n",
+      "FFFH\n",
+      "H\u001b[41mF\u001b[0mFG\n",
+      "  (Right)\n",
+      "SFFF\n",
+      "FHFH\n",
+      "FFFH\n",
+      "H\u001b[41mF\u001b[0mFG\n",
+      "  (Right)\n",
+      "SFFF\n",
+      "FHFH\n",
+      "F\u001b[41mF\u001b[0mFH\n",
+      "HFFG\n",
+      "  (Down)\n",
+      "SFFF\n",
+      "FHFH\n",
+      "\u001b[41mF\u001b[0mFFH\n",
+      "HFFG\n",
+      "  (Up)\n",
+      "SFFF\n",
+      "FHFH\n",
+      "\u001b[41mF\u001b[0mFFH\n",
+      "HFFG\n",
+      "  (Up)\n",
+      "SFFF\n",
+      "\u001b[41mF\u001b[0mHFH\n",
+      "FFFH\n",
+      "HFFG\n",
+      "  (Left)\n",
+      "SFFF\n",
+      "\u001b[41mF\u001b[0mHFH\n",
+      "FFFH\n",
+      "HFFG\n",
+      "  (Left)\n",
+      "SFFF\n",
+      "\u001b[41mF\u001b[0mHFH\n",
+      "FFFH\n",
+      "HFFG\n",
+      "  (Left)\n",
+      "SFFF\n",
+      "\u001b[41mF\u001b[0mHFH\n",
+      "FFFH\n",
+      "HFFG\n",
+      "  (Left)\n",
+      "SFFF\n",
+      "\u001b[41mF\u001b[0mHFH\n",
+      "FFFH\n",
+      "HFFG\n",
+      "  (Left)\n",
+      "SFFF\n",
+      "\u001b[41mF\u001b[0mHFH\n",
+      "FFFH\n",
+      "HFFG\n",
+      "  (Left)\n",
+      "SFFF\n",
+      "FHFH\n",
+      "\u001b[41mF\u001b[0mFFH\n",
+      "HFFG\n",
+      "  (Up)\n",
+      "SFFF\n",
+      "\u001b[41mF\u001b[0mHFH\n",
+      "FFFH\n",
+      "HFFG\n",
+      "  (Left)\n",
+      "\u001b[41mS\u001b[0mFFF\n",
+      "FHFH\n",
+      "FFFH\n",
+      "HFFG\n",
+      "  (Left)\n",
+      "\u001b[41mS\u001b[0mFFF\n",
+      "FHFH\n",
+      "FFFH\n",
+      "HFFG\n",
+      "  (Left)\n",
+      "\u001b[41mS\u001b[0mFFF\n",
+      "FHFH\n",
+      "FFFH\n",
+      "HFFG\n",
+      "  (Left)\n",
+      "SFFF\n",
+      "\u001b[41mF\u001b[0mHFH\n",
+      "FFFH\n",
+      "HFFG\n",
+      "  (Left)\n",
+      "SFFF\n",
+      "FHFH\n",
+      "\u001b[41mF\u001b[0mFFH\n",
+      "HFFG\n",
+      "  (Up)\n",
+      "SFFF\n",
+      "FHFH\n",
+      "F\u001b[41mF\u001b[0mFH\n",
+      "HFFG\n",
+      "  (Down)\n",
+      "SFFF\n",
+      "FHFH\n",
+      "FF\u001b[41mF\u001b[0mH\n",
+      "HFFG\n",
+      "  (Left)\n",
+      "SFFF\n",
+      "FH\u001b[41mF\u001b[0mH\n",
+      "FFFH\n",
+      "HFFG\n",
+      "  (Left)\n",
+      "SFFF\n",
+      "F\u001b[41mH\u001b[0mFH\n",
+      "FFFH\n",
+      "HFFG\n",
+      "Episode ends. Reward = 0.0\n"
+     ]
+    }
+   ],
    "source": [
     "#Uncomment and run the following to evaluate your result, comment them when you generate the pdf\n",
-    "#Q = action_evaluation(env = env.env, gamma = 1, v = V)\n",
-    "#policy_estimate = action_selection(Q)\n",
-    "#render(env, policy_estimate)"
+    "# Q = action_evaluation(env = env.env, gamma = 1, v = V)\n",
+    "# policy_estimate = action_selection(Q)\n",
+    "# render(env, policy_estimate)"
    ]
   },
   {
